fixed mobile page overflow, removed modal for now.

--- a/styles/mainlayout.css
+++ b/styles/mainlayout.css
@@ -5,6 +5,7 @@ body {
     padding: 0;
     background: rgb(16,44,166);
     background: radial-gradient(circle, rgba(16,44,166,1) 0%, rgba(77,5,119,1) 100%);
+    overflow: hidden;
 }
 
 .mainColumnFlex {
